# handson

./: README.md  pyproject.toml
data/: download_cats_and_dogs.py
doc/: tips_and_answers.md
doc/advanced/: dataloader.py  optimizer.py
examples/: 0_Overview.ipynb  0_Overview.py  1_Dataset.ipynb  1_Dataset.py  2_Model.ipynb  2_Model.py  3_Training.ipynb  3_Training.py  4_Debugging.ipynb  4_Debugging.py
examples/config/: efficient_net_b2_pretrained.py  unet.py
examples/src/: dataloader.py  losses.py  main.py  model.py  model_unet.py  optimizer.py  viz.py
